--- a/package.json
+++ b/package.json
@@ -9,12 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.3",
+    "lucide-react": "^0.424.0",
+    "mongoose": "^8.5.2",
+    "multiparty": "^4.2.3",
+    "next": "14.2.5",
+    "next-auth": "^4.24.7",
+    "quill": "^2.0.2",
     "react": "^18",
+    "react-date-range": "^2.0.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
+    "react-router-dom": "^6.26.0",
+    "react-sortablejs": "^6.1.4",
+    "react-spinners": "^0.14.1"
   },
   "devDependencies": {
+    "@types/node": "22.1.0",
+    "@types/react": "18.3.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.5.4"
   }
 }
