--- a/.env
+++ b/.env
@@ -1,1 +1,28 @@
 MONGODB_URI="mongodb://localhost:27017/englishbuddy"
+
+NEXT_PUBLIC_HOSTNAME=http://localhost:3000
+
+NEXT_PUBLIC_UPLOAD_API=http://localhost
+
+
+
+# const URL=process.env.NEXT_PUBLIC_UPLOAD_API;
+
+# `${URL}:5000/api/upload
+
+# async function uploadImages(ev) {
+#     const files = ev.target?.files;
+#     if (files?.length > 0) {
+#       setIsUploading(true);
+#       const data = new FormData();
+#       for (const file of files) {
+#         data.append("file", file);
+#       }
+#       console.log("url are",URL);
+#       const res = await axios.post(`${URL}:5000/api/upload`, data);
+#       setImages((oldImages) => {
+#         return [...oldImages, res.data.fileUrl];
+#       });
+#       setIsUploading(false);
+#     }
+#   }
