--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.0",
     "react-sortablejs": "^6.1.4",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "22.1.0",
