--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.4",
     "lucide-react": "^0.424.0",
     "mongoose": "^8.5.2",
     "multiparty": "^4.2.3",
     "next": "14.2.5",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.8",
     "quill": "^2.0.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
@@ -32,7 +35,7 @@
     "@types/node": "22.1.0",
     "@types/react": "18.3.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "5.5.4"
   }
 }
