--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.3",
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.4",
+    "crypto-js": "^4.2.0",
     "lucide-react": "^0.424.0",
     "mongoose": "^8.5.2",
     "multiparty": "^4.2.3",
